--- a/src/components/works/work.scss
+++ b/src/components/works/work.scss
@@ -24,6 +24,7 @@
     display: flex;
     position: absolute;
     left: 0;
+    transition: all 1s ease-out;
 
     .container {
       width: 100vw;
