--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,6 +1,13 @@
+@import "../../global.scss";
+
 .intro {
   background-color: #fff;
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -9,15 +16,23 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
       float: right;
 
+      @include mobile {
+        align-items: flex-start;
+      }
+
       img {
+        border-radius: 50%;
         height: 90%;
+
+        @include mobile {
+          height: 50%;
+        }
       }
     }
   }
@@ -34,9 +49,18 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
         margin: 10px 0;
+
+        @include mobile {
+          font-size: 35px;
+        }
       }
       h2 {
         font-size: 35px;
@@ -44,6 +68,10 @@
       h3 {
         font-size: 30px;
         color: crimson;
+
+        @include mobile {
+          font-size: 20px;
+        }
       }
     }
     a {
