--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,11 +1,21 @@
+@import "../../global.scss";
+
 .testimonials {
   background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  @include mobile {
+    justify-content: space-around;
+  }
+
   h1 {
     font-size: 50px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   .container {
@@ -14,6 +24,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include mobile {
+      flex-direction: column;
+      height: 100%;
+    }
 
     .card {
       width: 250px;
@@ -26,10 +41,21 @@
       padding: 20px;
       transition: all 1s ease;
 
+      @include mobile {
+        height: 180px;
+        margin: 10px 0;
+      }
+
       &.featured {
         width: 300px;
         height: 75%;
         margin: 0 20px;
+
+        @include mobile {
+          height: 180px;
+          width: 250px;
+          margin: 1px;
+        }
       }
 
       &:hover {
@@ -52,6 +78,11 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+
+            @include mobile {
+              width: 30px;
+              height: 30px;
+            }
           }
         }
       }
@@ -59,6 +90,11 @@
         padding: 10px;
         border-radius: 10px;
         background-color: rgb(235, 225, 227);
+
+        @include mobile {
+          padding: 5px;
+          font-size: 12px;
+        }
       }
       .bottom {
         display: flex;
@@ -68,10 +104,18 @@
 
         h3 {
           margin-bottom: 5px;
+
+          @include mobile {
+            font-size: 14px;
+          }
         }
 
         h4 {
           color: gray;
+
+          @include mobile {
+            font-size: 13px;
+          }
         }
       }
     }
